deploy: c45da91fc757145ee9b7e9ed31068d0a2a8925ed

--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
   "name": "My Notes",
   "short_name": "My Notes",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "/r/",
+  "scope": "/r/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/favicon.svg",
+      "src": "/r/favicon.svg",
       "sizes": "512x512"
     }
   ]
