--- a/config.yaml
+++ b/config.yaml
@@ -16,6 +16,9 @@ markup:
   tableOfContents:
     startLevel: 1
 
+# Allow emoji shortcodes
+enableEmoji: true
+
 # Multi-lingual mode config
 # There are different options to translate files
 # See https://gohugo.io/content-management/multilingual/#translation-by-filename
